# claude-code-bot

./: .env.example  .gitignore  LICENSE  pyproject.toml  readme.md
src/: config.py  docker_manager.py  git_operations.py  github_client.py  issue_processor.py  linear_client.py  llm_service.py  log.py  main.py  polling_service.py
